# gl_test

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  dead_code_plan.md  out.diff  res.pak  test_allocators  test_allocators.cpp  todo.txt
.github/agents/: c-coder.agent.md
.github/workflows/: android.yml  build.yml  copilot-setup-steps.yml
_codeql_build_dir/: Makefile  cloud_fragment.spv  nebula_fragment.spv  packer  res.pak  shader_triangle
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/retsphinx/engine/: GameActivity.java
build-release/: Makefile  debug_vertex.spv  menu_fragment.spv  packer  res.pak  shader_triangle  sprite_vertex.spv
build-test/: Makefile  packer
build_full/: Makefile  anim_phong_fragment.spv  anim_phong_vertex.spv  anim_sprite_fragment.spv  anim_sprite_vertex.spv  cloud_fragment.spv  debug_vertex.spv  lightsaber_fragment.spv  lightsaber_vertex.spv  packer  particle_fragment.spv  particle_vertex.spv  phong_multilight_fragment.spv  phong_multilight_vertex.spv  sprite_fragment.spv  sprite_vertex.spv  vertex.spv  water_fragment.spv  water_vertex.spv
build_packer_only/: Makefile
build_test/: Makefile
cmake/toolchains/: android.cmake  mingw64.cmake
docs/: ADDING_NEW_ACTION.md  KEYBINDING_SYSTEM.md
res/: sfx.opus
res/characters/guide/: guide.chr  guide.chr.json
res/characters/player/: player.chr  player.chr.json
res/dialogue/demo/: demo.dlg  demo.dlg.json
res/fonts/aileron/: Aileron-Black.font  Aileron-BlackItalic.font  Aileron-Bold.font  Aileron-BoldItalic.font  Aileron-Heavy.font  Aileron-HeavyItalic.font  Aileron-Italic.font  Aileron-Light.font  Aileron-LightItalic.font  Aileron-Regular.font  Aileron-SemiBold.font  Aileron-SemiBoldItalic.font  Aileron-Thin.font  Aileron-ThinItalic.font  Aileron-UltraLight.font  Aileron-UltraLightItalic.font
res/fx/: area_fireflies.lua  candle_flame.lua  lantern_bugs.lua  my_particles_test.lua  smoke_puff.lua  splash1.lua  stress_test.lua
res/music/: example.loop
res/nodes/: button.lua  circle_node_script.lua
res/objects/destructible_box/: destructible_box.lua
res/objects/lantern/: lantern.lua
res/objects/lightsaber/: lightsaber.lua  lightsaber_fragment.glsl
res/objects/rock/: rock.lua
res/scenes/: audio_test.lua  default.lua  dialogue_test.lua  menu.lua  particle_editor.lua  physics.lua  transition_test.lua
res/shaders/: anim_phong_fragment.glsl  anim_phong_vertex.glsl  anim_sprite_fragment.glsl  anim_sprite_vertex.glsl  cloud_fragment.glsl  debug_vertex.glsl  menu_fragment.glsl  particle_vertex.glsl  phong_multilight_fragment.glsl  sprite_fragment.glsl  sprite_vertex.glsl  text_fragment.glsl  text_vertex.glsl  toon_fragment.glsl  toon_vertex.glsl  vector_fragment.glsl  vector_vertex.glsl  water_fragment.glsl  water_fragment.spv  water_vertex.glsl
scenes/: aspect_test.lua  audio_test.lua  default.lua  menu.lua  particle_editor.lua  physics.lua
shaders/: cloud_fragment.glsl  cloud_vertex.glsl  debug_line_vertex.glsl  debug_vertex.glsl  fragment.glsl  lightsaber_fragment.glsl  lightsaber_vertex.glsl  nebula_fragment.glsl  nebula_vertex.glsl  particle_fragment.glsl  particle_vertex.glsl  phong_fragment.glsl  phong_multilight_fragment.glsl  phong_multilight_vertex.glsl  phong_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl  toon_fragment.glsl  toon_vertex.glsl  vertex.glsl
src/: AudioManager.cpp  AudioManager.h  Box2DPhysics.cpp  Box2DPhysics.h  ConsoleBuffer.h  HashTable.h  ImGuiManager.cpp  ImGuiManager.h  InputActions.h  LargeMemoryAllocator.cpp  LargeMemoryAllocator.h  LuaInterface.cpp  LuaInterface.h  MemoryAllocator.h  ParticleSystem.cpp  ParticleSystem.h  ResourceTypes.h  SceneLayer.cpp  SceneLayer.h  SceneManager.cpp  SceneManager.h  SmallAllocator.cpp  SmallAllocator.h  String.cpp  String.h  Vector.h  VibrationManager.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanLight.cpp  VulkanLight.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanTexture.cpp  VulkanTexture.h  WaterEffect.cpp  (+7 more)
src/animation/: AnimationEngine.cpp  AnimationEngine.h
src/audio/: AudioManager.cpp  AudioManager.h
src/compress/: Compress.cpp  Compress.h
src/core/: HashSet.h  HashTable.h  ResourceTypes.h  Stack.h  String.cpp  String.h  TrigLookup.cpp  TrigLookup.h  Vector.h  VectorTest.cpp  android_main.cpp  config.cpp  config.h  hash.h  no_stl_shims.cpp
src/debug/: ConsoleBuffer.h  ImGuiManager.cpp  ImGuiManager.h  ThreadProfiler.h  ThreadProfilerUI.h
src/effects/: ParticleSystem.cpp  ParticleSystem.h  WaterEffect.cpp  WaterEffect.h
src/input/: InputActions.h  VibrationManager.h
src/memory/: FastMemcpy.cpp  FastMemcpy.h  FastMemset.cpp  FastMemset.h  LargeMemoryAllocator.cpp  LargeMemoryAllocator.h  LargeMemoryAllocatorTest.cpp  MemoryAllocator.h  MemoryLeakTest.cpp  SmallAllocator.cpp  SmallAllocator.h  SmallMemoryAllocator.cpp  SmallMemoryAllocator.h
src/physics/: Box2DPhysics.cpp  Box2DPhysics.h
src/resources/: resource.cpp  resource.h
src/scene/: DialogueManager.cpp  DialogueManager.h  LuaInterface.cpp  LuaInterface.h  SceneLayer.cpp  SceneLayer.h  SceneManager.cpp  SceneManager.h
src/text/: FontManager.cpp  FontManager.h  TextLayer.cpp  TextLayer.h  TextLayout.cpp  TextLayout.h
src/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanLight.cpp  VulkanLight.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanTexture.cpp  VulkanTexture.h  VulkanWaterPolygon.cpp  VulkanWaterPolygon.h
tools/: etc1.cpp  etc1.h  font_extractor.cpp  packer.cpp  test_trig.cpp
tools/packer/: packer.cpp
